--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -149,6 +150,7 @@
     "next-themes": "^0.2.1",
     "ni18n": "^1.1.0",
     "postcss": "8.4.30",
+    "prisma": "^5.4.2",
     "prisma-zod-generator": "^0.8.13",
     "quill": "^1.3.7",
     "react": "18.2.0",
@@ -179,9 +181,6 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^39.0.2",
-    "@ckeditor/ckeditor5-dev-utils": "^39.1.0",
-    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@rodrigoodhin/editorjs-image-gallery": "^0.1.0",
     "@types/lodash": "^4.14.199",
     "@types/lodash.template": "^4.5.1",
