--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ckeditor/ckeditor5-theme-lark": "^39.0.2",
     "@ckeditor/ckeditor5-typing": "^39.0.2",
     "@ckeditor/ckeditor5-upload": "^39.0.2",
+    "@craftjs/core": "^0.2.0",
     "@editorjs/checklist": "^1.5.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/delimiter": "^1.3.0",
@@ -57,6 +58,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@mui/icons-material": "^5.14.12",
     "@mui/material": "^5.14.12",
+    "@mui/styles": "^5.14.13",
     "@prisma/client": "^5.3.1",
     "@progress/kendo-drawing": "^1.18.0",
     "@progress/kendo-licensing": "^1.3.3",
@@ -110,16 +112,19 @@
     "@react-page/plugins-video": "^5.4.4",
     "@react-page/react-admin": "^5.4.4",
     "@tanstack/react-table": "^8.10.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.0.2",
+    "@vercel/blob": "^0.13.0",
     "autoprefixer": "10.4.16",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "^2.30.0",
     "editorjs-alert": "^1.1.3",
     "editorjs-change-case": "^0.0.3",
@@ -145,15 +150,19 @@
     "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "lucide-react": "^0.279.0",
+    "lzutf8": "^0.6.3",
+    "material-ui-color-picker": "^3.5.1",
     "next": "13.5.2",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "ni18n": "^1.1.0",
+    "novel": "^0.1.22",
     "postcss": "8.4.30",
     "prisma": "^5.4.2",
     "prisma-zod-generator": "^0.8.13",
     "quill": "^1.3.7",
     "react": "18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.8.2",
     "react-dnd": "^15.1.2",
     "react-dom": "18.2.0",
@@ -165,6 +174,7 @@
     "react-quill": "^2.0.0",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
+    "react-textarea-autosize": "^8.5.3",
     "react-twitter-widgets": "^1.11.0",
     "react-wrap-balancer": "^1.1.0",
     "recharts": "^2.8.0",
