--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "slate": "^0.94.1",
     "slate-react": "^0.99.0",
     "styled-components": "^6.0.8",
+    "swiper": "^10.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
