--- a/package.json
+++ b/package.json
@@ -121,6 +121,12 @@
     "@react-page/plugins-video": "^5.4.4",
     "@react-page/react-admin": "^5.4.4",
     "@tanstack/react-table": "^8.10.1",
+    "@tiptap/extension-document": "^2.1.12",
+    "@tiptap/extension-paragraph": "^2.1.12",
+    "@tiptap/extension-text": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/react": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "20.6.3",
     "@types/quill": "^2.0.12",
@@ -153,7 +159,7 @@
     "editorjs-tooltip": "^1.1.15",
     "editorjs-undo": "^2.0.23",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
+    "eslint-config-next": "14.0.0",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -164,7 +170,7 @@
     "lucide-react": "^0.279.0",
     "lzutf8": "^0.6.3",
     "material-ui-color-picker": "^3.5.1",
-    "next": "13.5.2",
+    "next": "14.0.0",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "ni18n": "^1.1.0",
